Compilation_Racket_Mips/piton/tests/errors/duplicate_decl_def.py
def a() -> int: return 1
a: int = 2